--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5522b660",
+   "metadata": {},
+   "source": [
+    "> 未必需要刻意地去学 linux 命令或脚本，只需要遇到的好的脚本，就一顿疯狂吸收；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b39ac2cb",
    "metadata": {},
    "source": [
