--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -25,6 +25,71 @@
     "    - 目录/路径的压栈、出栈操作\n",
     "    - 可以多次 `pushd` 不同的路径，`pushd` 完了之后会进入到提供的路径"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea1f9d67",
+   "metadata": {},
+   "source": [
+    "- 文件描述符（file descriptor）\n",
+    "    - File descriptor `1` is the standard output (stdout).\n",
+    "    - File descriptor `2` is the standard error (stderr).\n",
+    "\n",
+    "- At first, `2>1` may look like a good way to redirect stderr to stdout. However, it will actually be interpreted as \"redirect stderr to a file named 1\".\n",
+    "\n",
+    "- `&` indicates that what follows and precedes is a `file descriptor`, and not a filename. Thus, we use 2>&1. Consider >& to be a redirect merger operator."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "320b47a0",
+   "metadata": {},
+   "source": [
+    "## 实用"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "15c23e2c",
+   "metadata": {},
+   "source": [
+    "- 后台运行\n",
+    "\n",
+    "```\n",
+    "# 日志到 jupyter.log 文件\n",
+    "# >> 表示追加（append）\n",
+    "jupyter notebook --no-browser --port=8080 > jupyter.log 2>&1 &\n",
+    "# nohup 表示no hang up, 就是不挂起, 于是这个命令执行后即使终端退出, 也不会停止运行.\n",
+    "nohup jupyter notebook --no-browser --port=8080 > jupyter.log 2>&1 &\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a6d364a",
+   "metadata": {},
+   "source": [
+    "## grep"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2d66b030",
+   "metadata": {},
+   "source": [
+    "> 日志搜索，定位问题（前提是代码运行过程中，需要打印足够多的运行/debug日志）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73271591",
+   "metadata": {},
+   "source": [
+    "- 参数\n",
+    "    - `-i`：忽略大小写\n",
+    "    - `-n`：显示相对行号\n",
+    "    - `-r`：递归子文件下搜索"
+   ]
   }
  ],
  "metadata": {
