--- a/服务器运维.ipynb
+++ b/服务器运维.ipynb
@@ -2,46 +2,80 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e34c1f2e",
+   "id": "0bd1562d",
    "metadata": {},
    "source": [
-    "## 服务器端常见的 3 种网卡"
+    "## 基本信息"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "81585739",
+   "id": "9bc092e5",
    "metadata": {},
    "source": [
-    "- IB：Infinite Band"
+    "- os\n",
+    "\n",
+    "    ```\n",
+    "    $ lsb_release -a\n",
+    "    ```\n",
+    "\n",
+    "- 内存\n",
+    "\n",
+    "    ```\n",
+    "    $ free -h\n",
+    "    ```\n",
+    "    \n",
+    "- CPU\n",
+    "\n",
+    "    ```\n",
+    "    $ lscpu\n",
+    "    # Model name:                      Intel(R) Xeon(R) Platinum 8336C CPU @ 2.30GHz\n",
+    "    # Core(s) per socket:  32（cpu 核心数）\n",
+    "    # CPU(s):                  64（cpu 线程数）\n",
+    "    ```"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d0d7391c",
+   "id": "2dcf26a5",
    "metadata": {},
    "source": [
-    "## 监听ip与端口号"
+    "## 磁盘管理"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "55024599",
+   "id": "712fd61f",
    "metadata": {},
    "source": [
-    "- 除了把 jupyter notebook 的后台服务启起来，每启动一个具体的 notebook，都会占用一个 port（以及会启动一个 pid）；"
+    "### du"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2562e047",
+   "id": "e63c4dbb",
    "metadata": {},
    "source": [
     "```\n",
-    "$ netstat -tulpn\n",
-    "# listen 表示监听，最后一列为 PIP/Program name\n",
-    "$ netstat -tulpn | grep LISTEN\n",
+    "$ du -sh\n",
+    "$ du -s --max-depth=1\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb029200",
+   "metadata": {},
+   "source": [
+    "## 网络及端口"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ea73d774",
+   "metadata": {},
+   "source": [
+    "## 日志排查（grep）"
    ]
   }
  ],
