--- a/硬件与组机.ipynb
+++ b/硬件与组机.ipynb
@@ -2,46 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e34c1f2e",
+   "id": "65b87b9a",
    "metadata": {},
    "source": [
-    "## 服务器端常见的 3 种网卡"
+    "## 机箱"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "81585739",
+   "id": "69ddc04b",
    "metadata": {},
    "source": [
-    "- IB：Infinite Band"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d0d7391c",
-   "metadata": {},
-   "source": [
-    "## 监听ip与端口号"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55024599",
-   "metadata": {},
-   "source": [
-    "- 除了把 jupyter notebook 的后台服务启起来，每启动一个具体的 notebook，都会占用一个 port（以及会启动一个 pid）；"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2562e047",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "$ netstat -tulpn\n",
-    "# listen 表示监听，最后一列为 PIP/Program name\n",
-    "$ netstat -tulpn | grep LISTEN\n",
-    "```"
+    "- Phanteks（追风者） Enthoo Pro Ⅱ\n"
    ]
   }
  ],
