--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -10,6 +10,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cba582c4",
+   "metadata": {},
+   "source": [
+    "## 基本信息查看"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f456bcfd",
+   "metadata": {},
+   "source": [
+    "- `uname -s`\n",
+    "    - ubuntu: `Linux`\n",
+    "    - macos: `Darwin`\n",
+    "- `uname -m`\n",
+    "    - ubuntu: `x86_64`\n",
+    "    - macos: `x86_64`\n",
+    "\n",
+    "- 关于 `x86_64` \n",
+    "    - 是 Intel architecture，而 `aarch64` 是 ARM architecture."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8fdc38d",
+   "metadata": {},
+   "source": [
+    "## 命令行"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c6ec3b3",
+   "metadata": {},
+   "source": [
+    "LINUX SHELL 多个命令一起执行的几种方法（适用于几个命令逐个顺序执行的时候）\n",
+    "- 用 `;` 隔开：`cd /home/PyTest/src; python suning.py`\n",
+    "- 用 `&&` 隔开：`./stop.sh && ./start.sh`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b39ac2cb",
    "metadata": {},
    "source": [
@@ -88,7 +130,12 @@
     "- 参数\n",
     "    - `-i`：忽略大小写\n",
     "    - `-n`：显示相对行号\n",
-    "    - `-r`：递归子文件下搜索"
+    "    - `-r`：递归子文件下搜索\n",
+    "    - `-e`：支持正则\n",
+    "    - 上下文\n",
+    "        - `-C`：center\n",
+    "        - `-B`: below\n",
+    "        - `-A`：after"
    ]
   }
  ],
