--- a/wget_curl.ipynb
+++ b/wget_curl.ipynb
@@ -2,54 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e34c1f2e",
+   "id": "e26828d4",
    "metadata": {},
    "source": [
-    "## 服务器端常见的 3 种网卡"
+    "## curl"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "81585739",
+   "id": "17fb5398",
    "metadata": {},
    "source": [
-    "- IB：Infinite Band"
+    "- `curl -L xx.xx.xx -o `\n",
+    "    - `-o`：另存为本地路径及文件名；"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d0d7391c",
+   "id": "1b06ea11",
    "metadata": {},
    "source": [
-    "## 监听ip与端口号"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55024599",
-   "metadata": {},
-   "source": [
-    "- 除了把 jupyter notebook 的后台服务启起来，每启动一个具体的 notebook，都会占用一个 port（以及会启动一个 pid）；"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2562e047",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "$ netstat -tulpn\n",
-    "# listen 表示监听，最后一列为 PIP/Program name\n",
-    "$ netstat -tulpn | grep LISTEN\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "568bb62d",
-   "metadata": {},
-   "source": [
-    "## 端口转发（forward）"
+    "## wget"
    ]
   }
  ],
