--- a/服务器运维.ipynb
+++ b/服务器运维.ipynb
@@ -32,6 +32,7 @@
     "    # Model name:                      Intel(R) Xeon(R) Platinum 8336C CPU @ 2.30GHz\n",
     "    # Core(s) per socket:  32（cpu 核心数）\n",
     "    # CPU(s):                  64（cpu 线程数）\n",
+    "    # flag： instructions（指令集，avx2）\n",
     "    ```"
    ]
   },
@@ -57,9 +58,78 @@
    "metadata": {},
    "source": [
     "```\n",
-    "$ du -sh\n",
-    "$ du -s --max-depth=1\n",
+    "df -hl：查看磁盘剩余空间，且可以查看 Mounted on\n",
+    "df -h：查看每个根路径的分区大小\n",
+    "\n",
+    "du -sh [目录名]：返回该目录的大小\n",
+    "du -sm [文件夹]：返回该文件夹总M数\n",
+    "du -h [目录名]：查看指定文件夹下的所有文件大小（包含子文件夹）\n",
+    "du -h --max-depth=1\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c8994536",
+   "metadata": {},
+   "source": [
+    "### 挂接双系统下 windows 磁盘"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53784c61",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "$ cd /dev\n",
+    "$ sudo fdisk -lu   # 找到对应的 windows 硬盘\n",
+    "\n",
+    "$ sudo mount /dev/nvme0n1p3 /media/username\n",
+    "$ umount /mediat/username\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c529742",
+   "metadata": {},
+   "source": [
+    "### 文件统计"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6bda4bcd",
+   "metadata": {},
+   "source": [
+    "查看当前目录下的文件数量（不包含子目录中的文件）  \n",
+    "`ls -l|grep \"^-\"| wc -l`\n",
+    "\n",
+    "查看当前目录下的文件数量（包含子目录中的文件） 注意：R，代表子目录  \n",
+    "`ls -lR|grep \"^-\"| wc -l`\n",
+    "\n",
+    "查看当前目录下的文件夹目录个数（不包含子目录中的目录），同上述理，如果需要查看子目录的，加上R  \n",
+    "`ls -l|grep \"^d\"| wc -l`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44be4a5f",
+   "metadata": {},
+   "source": [
+    "## 查询负载"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0418ec2d",
+   "metadata": {},
+   "source": [
+    "- cpu 负载\n",
+    "    - top\n",
+    "        - 按下数字 `1` 即可查询多核 cpus 的负载 \n",
+    "            - running，sleeping，stopped，zombie"
    ]
   },
   {
