--- a/硬件与组机.ipynb
+++ b/硬件与组机.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "344ad3ad",
+   "metadata": {},
+   "source": [
+    "## cpu 与内存"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fcefdb8d",
+   "metadata": {},
+   "source": [
+    "- HBM：high bandwidth memory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "65b87b9a",
    "metadata": {},
    "source": [
@@ -15,6 +31,31 @@
    "source": [
     "- Phanteks（追风者） Enthoo Pro Ⅱ\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a1a8e3b",
+   "metadata": {},
+   "source": [
+    "## 电源"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db43b2a0",
+   "metadata": {},
+   "source": [
+    "- 家用转接头\n",
+    "    - 10A => 20A ??"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2925598b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
