--- a/服务器运维.ipynb
+++ b/服务器运维.ipynb
@@ -49,7 +49,7 @@
    "id": "712fd61f",
    "metadata": {},
    "source": [
-    "### du"
+    "### du 与 df"
    ]
   },
   {
@@ -57,6 +57,10 @@
    "id": "e63c4dbb",
    "metadata": {},
    "source": [
+    "\n",
+    "- df：检查磁盘空间占用情况（并不能查看某个目录占用的磁盘大小）。\n",
+    "- du：显示文件或目录所占的磁盘空间。\n",
+    "\n",
     "```\n",
     "df -hl：查看磁盘剩余空间，且可以查看 Mounted on\n",
     "df -h：查看每个根路径的分区大小\n",
@@ -111,6 +115,36 @@
     "\n",
     "查看当前目录下的文件夹目录个数（不包含子目录中的目录），同上述理，如果需要查看子目录的，加上R  \n",
     "`ls -l|grep \"^d\"| wc -l`\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5c644b4",
+   "metadata": {},
+   "source": [
+    "### U盘管理"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e47e687f",
+   "metadata": {},
+   "source": [
+    "- 查看挂载\n",
+    "    - `df -hl`\n",
+    "- 查看磁盘信息\n",
+    "    - `fdisk -l`\n",
+    "- U盘格式化\n",
+    "    - `/dev/sdb1`\n",
+    "    - 第一步，先解除挂载 `sudo umount /dev/sdb1`\n",
+    "    - 格式化\n",
+    "    \n",
+    "    ```\n",
+    "    sudo mkfs.ntfs /dev/sdb1 # 可能需要首先安装 ntfs-3g（`sudo apt-get install ntfs-3g`）\n",
+    "    \n",
+    "    sudo mkfs.ext4 /dev/sdb1\n",
+    "    sudo mkfs.vfat -F 32 /dev/sdb1\n",
+    "    ```"
    ]
   },
   {
