--- a/nvidia-smi.ipynb
+++ b/nvidia-smi.ipynb
@@ -40,12 +40,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "3bfc7408",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-07-15T11:27:26.961914Z",
-     "start_time": "2023-07-15T11:27:26.934204Z"
+     "end_time": "2023-07-15T11:36:56.568743Z",
+     "start_time": "2023-07-15T11:36:56.563747Z"
     }
    },
    "outputs": [
@@ -53,11 +53,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU memory occupied: 352 MB.\n"
+      "GPU memory occupied: 2663 MB.\n"
      ]
     }
    ],
    "source": [
+    "# 初始状况下的 base 显存占用\n",
+    "print_gpu_utilization()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "4ca0f5c4",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-07-15T11:37:36.925692Z",
+     "start_time": "2023-07-15T11:37:36.912218Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GPU memory occupied: 2663 MB.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "# 此时 kernels 也会被 loaded\n",
+    "torch.ones((1, 1)).to(\"cuda\")\n",
     "print_gpu_utilization()"
    ]
   }
