--- a/nv_gpus.ipynb
+++ b/nv_gpus.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "95935dc7",
+   "id": "4a4509ee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-07-23T03:35:09.714674Z",
@@ -17,7 +17,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c50ffddc",
+   "id": "b4647be4",
+   "metadata": {},
+   "source": [
+    "## basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "17f29139",
+   "metadata": {},
+   "source": [
+    "- 概念\n",
+    "    - FMA：fused multiply and add；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5b6c1d81",
    "metadata": {},
    "source": [
     "## gpu cards"
@@ -26,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8582e1e0",
+   "id": "e6a0c119",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-07-23T03:36:17.198069Z",
@@ -56,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00df4245",
+   "id": "d8012c0f",
    "metadata": {},
    "source": [
     "## tensor core"
@@ -64,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "134a0747",
+   "id": "984546e6",
    "metadata": {},
    "source": [
     "- 矩阵乘法优化\n",
@@ -75,7 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aefbfab0",
+   "id": "aff0fede",
    "metadata": {},
    "outputs": [],
    "source": []
