--- a/nvidia-smi.ipynb
+++ b/nvidia-smi.ipynb
@@ -10,6 +10,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1a8f3689",
+   "metadata": {},
+   "source": [
+    "## nvlink"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2d1b9ce",
+   "metadata": {},
+   "source": [
+    "- 3090 与 A100 nvlink 可以通用；\n",
+    "- 3090 只能两两相连\n",
+    "    - 卡A只能跟卡B相连\n",
+    "    - 卡A如果跟卡B相连，就不能再跟卡C相连\n",
+    "- A100 可以4卡相连"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "b56eb90c",
    "metadata": {},
    "source": [
