--- a/服务器运维.ipynb
+++ b/服务器运维.ipynb
@@ -90,7 +90,7 @@
     "$ sudo fdisk -lu   # 找到对应的 windows 硬盘\n",
     "\n",
     "$ sudo mount /dev/nvme0n1p3 /media/username\n",
-    "$ umount /mediat/username\n",
+    "$ umount /media/username\n",
     "```"
    ]
   },
