--- a/cuda_visible_devices.ipynb
+++ b/cuda_visible_devices.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a4246f29",
+   "id": "884814a2",
    "metadata": {},
    "source": [
     "## basics"
@@ -10,16 +10,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e6b6584",
+   "id": "c04636aa",
    "metadata": {},
    "source": [
     "- `TrainingArguments` & `Trainer`\n",
-    "    - `TrainingArguments`中的 n_gpu 一般是 `self._n_gpu = torch.cuda.device_count()`"
+    "    - `TrainingArguments`中的 `n_gpu` 一般是 `self._n_gpu = torch.cuda.device_count()`"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "74d88325",
+   "id": "f140921c",
    "metadata": {},
    "source": [
     "## `os.environ['CUDA_VISIBLE_DEVICES']`"
@@ -27,12 +27,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "972732ea",
+   "execution_count": 1,
+   "id": "efaf7659",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-01T12:50:12.762107Z",
-     "start_time": "2023-08-01T12:50:12.757484Z"
+     "end_time": "2023-08-01T13:44:24.313022Z",
+     "start_time": "2023-08-01T13:44:24.299140Z"
     }
    },
    "outputs": [],
@@ -45,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "243bae8b",
+   "execution_count": 2,
+   "id": "dacbd433",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-01T12:42:20.848364Z",
-     "start_time": "2023-08-01T12:42:20.842507Z"
+     "end_time": "2023-08-01T13:44:27.041260Z",
+     "start_time": "2023-08-01T13:44:25.564157Z"
     }
    },
    "outputs": [],
@@ -60,12 +60,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "838e952c",
+   "execution_count": 3,
+   "id": "5cca1b91",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-01T13:22:04.983045Z",
-     "start_time": "2023-08-01T13:22:04.977567Z"
+     "end_time": "2023-08-01T13:44:27.813501Z",
+     "start_time": "2023-08-01T13:44:27.785106Z"
     }
    },
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2024f6f6",
+   "id": "50b619cf",
    "metadata": {},
    "source": [
     "## 命令行"
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e84f23c0",
+   "execution_count": 4,
+   "id": "699e54d3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-01T13:23:41.499638Z",
-     "start_time": "2023-08-01T13:23:40.069030Z"
+     "end_time": "2023-08-01T13:44:49.386081Z",
+     "start_time": "2023-08-01T13:44:47.557239Z"
     }
    },
    "outputs": [
@@ -114,12 +114,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e362d88b",
+   "execution_count": 5,
+   "id": "27e7bd29",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-01T13:23:33.541055Z",
-     "start_time": "2023-08-01T13:23:32.081744Z"
+     "end_time": "2023-08-01T13:44:52.772663Z",
+     "start_time": "2023-08-01T13:44:51.384404Z"
     }
    },
    "outputs": [
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d0ef6db",
+   "id": "2a0d577a",
    "metadata": {},
    "outputs": [],
    "source": []
