--- a/集群调度与管理.ipynb
+++ b/集群调度与管理.ipynb
@@ -16,6 +16,24 @@
     "- 集群管理工具\n",
     "    - SLURM"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0eeca82a",
+   "metadata": {},
+   "source": [
+    "## SLURM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "413fccfe",
+   "metadata": {},
+   "source": [
+    "- 常用命令\n",
+    "    - sbatch\n",
+    "    - salloc"
+   ]
   }
  ],
  "metadata": {
