--- a/wget_curl.ipynb
+++ b/wget_curl.ipynb
@@ -24,6 +24,17 @@
    "source": [
     "## wget"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca45fb04",
+   "metadata": {},
+   "source": [
+    "- 参数\n",
+    "    - `-P`：`wget https://karpathy.ai/llama2c/model.bin -P out`\n",
+    "        - -P prefix\n",
+    "        - `--directory-prefix=prefix`"
+   ]
   }
  ],
  "metadata": {
