--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -26,6 +26,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "123416bd",
+   "metadata": {},
+   "source": [
+    "## 常用命令"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68c55636",
+   "metadata": {},
+   "source": [
+    "- `ln`\n",
+    "    - `ln -s`：软链接(符号链接)\n",
+    "    - 不论是硬链接或软链接都不会将原本的档案复制一份，只会占用非常少量的磁碟空间。\n",
+    "        - 软链接，以路径的形式存在。类似于Windows操作系统中的快捷方式\n",
+    "        - 硬链接：以文件副本的形式存在。但不占用实际空间。\n",
+    "            - 不允许给目录创建硬链接"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a8fdc38d",
    "metadata": {},
    "source": [
