--- a/服务器管理及运维.ipynb
+++ b/服务器管理及运维.ipynb
@@ -13,6 +13,9 @@
    "id": "9bc092e5",
    "metadata": {},
    "source": [
+    "- 服务器 linux 版本\n",
+    "    - Ubuntu\n",
+    "    - RHEL：Red Hat Enterprise Linux OS\n",
     "- os\n",
     "\n",
     "    ```\n",
@@ -34,6 +37,23 @@
     "    # CPU(s):                  64（cpu 线程数）\n",
     "    # flag： instructions（指令集，avx2）\n",
     "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "341b6de9",
+   "metadata": {},
+   "source": [
+    "## 软件安装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e37ae812",
+   "metadata": {},
+   "source": [
+    "- `deb` file\n",
+    "    - `dpkg -i xx.deb`"
    ]
   },
   {
