--- a/深度学习环境安装_cudnn.ipynb
+++ b/深度学习环境安装_cudnn.ipynb
@@ -34,8 +34,11 @@
     "```\n",
     "\n",
     "- 头文件地址：\n",
+    "    - `/usr/include/cudnn_version.h`\n",
+    "    - `/usr/include/cudnn.h`\n",
     "    - `/usr/include/x86_64-linux-gnu/cudnn.h` ??\n",
-    "    "
+    "    - 查询版本\n",
+    "        - `cat /usr/include/cudnn_version.h | grep CUDNN_MAJOR -A 2`"
    ]
   }
  ],
