--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -42,7 +42,12 @@
     "    - 不论是硬链接或软链接都不会将原本的档案复制一份，只会占用非常少量的磁碟空间。\n",
     "        - 软链接，以路径的形式存在。类似于Windows操作系统中的快捷方式\n",
     "        - 硬链接：以文件副本的形式存在。但不占用实际空间。\n",
-    "            - 不允许给目录创建硬链接"
+    "            - 不允许给目录创建硬链接\n",
+    "- 查询\n",
+    "    - 查询命令 `which python`\n",
+    "    - 查询文件 `whereis cudnn.h`\n",
+    "    - 查询主机名 `hostname`\n",
+    "    - 查询用户名 `whoami`"
    ]
   },
   {
