--- a/tmux.ipynb
+++ b/tmux.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "9c749866",
+   "metadata": {},
+   "source": [
+    "## basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "0c4a17d9",
    "metadata": {},
    "source": [
@@ -13,6 +21,23 @@
     "    - %：左右\n",
     "    - o：切换窗口；\n",
     "    - x：关闭当前窗口；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30f7353f",
+   "metadata": {},
+   "source": [
+    "## advanced"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a55c2ef2",
+   "metadata": {},
+   "source": [
+    "- 设置鼠标触摸板支持\n",
+    "    - `tmux set mouse on`"
    ]
   }
  ],
