--- a/服务器管理及运维.ipynb
+++ b/服务器管理及运维.ipynb
@@ -183,7 +183,11 @@
     "- cpu 负载\n",
     "    - top\n",
     "        - 按下数字 `1` 即可查询多核 cpus 的负载 \n",
-    "            - running，sleeping，stopped，zombie"
+    "            - running，sleeping，stopped，zombie\n",
+    "- 查询 cp/mv 进度\n",
+    "    - 安装 progress 工具：`sudo apt-get install progress`\n",
+    "    - `progress -w`\n",
+    "    - `progress -M -w`: 实时监控"
    ]
   },
   {
