--- a/tmux.ipynb
+++ b/tmux.ipynb
@@ -37,7 +37,8 @@
    "metadata": {},
    "source": [
     "- 设置鼠标触摸板支持\n",
-    "    - `tmux set mouse on`"
+    "    - `tmux set mouse on`\n",
+    "- `tmux attach -t 3`"
    ]
   }
  ],
