--- a/nv_gpus_clusters.ipynb
+++ b/nv_gpus_clusters.ipynb
@@ -29,7 +29,9 @@
    "metadata": {},
    "source": [
     "- 概念\n",
-    "    - FMA：fused multiply and add；"
+    "    - FMA：fused multiply and add；\n",
+    "- 版本\n",
+    "    - PCIe 版，A800 PCIe 版；"
    ]
   },
   {
