--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -47,7 +47,12 @@
     "    - 查询命令 `which python`\n",
     "    - 查询文件 `whereis cudnn.h`\n",
     "    - 查询主机名 `hostname`\n",
-    "    - 查询用户名 `whoami`"
+    "    - 查询用户名 `whoami`\n",
+    "- 命令执行\n",
+    "    - ctrl + r：匹配历史命令，reverse-i-search\n",
+    "        - ctrl + g：退出\n",
+    "    - history：查看历史命令\n",
+    "        "
    ]
   },
   {
@@ -154,6 +159,22 @@
     "        - `-C`：center\n",
     "        - `-B`: below\n",
     "        - `-A`：after"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fe1f2d4",
+   "metadata": {},
+   "source": [
+    "## 压缩与解压缩"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67cdd02",
+   "metadata": {},
+   "source": [
+    "- `zip -r my_model.zip ./my_model`"
    ]
   }
  ],
