--- a/服务器管理及运维.ipynb
+++ b/服务器管理及运维.ipynb
@@ -116,6 +116,24 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a1a3cbed",
+   "metadata": {},
+   "source": [
+    "### 挂载U盘"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f3f3d78",
+   "metadata": {},
+   "source": [
+    "- `lsblk`: list block devices\n",
+    "- `sudo mount /dev/sdb1 /mnt/usb`\n",
+    "- `sudo umount /mnt/usb`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6c529742",
    "metadata": {},
    "source": [
