--- a/nv_gpus_clusters.ipynb
+++ b/nv_gpus_clusters.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5311731",
+   "id": "e3d6584c",
    "metadata": {},
    "source": [
     "### hyperplane"
@@ -140,13 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "92e48740",
+   "execution_count": 7,
+   "id": "22832a49",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-08-22T14:49:36.887840Z",
-     "start_time": "2023-08-22T14:49:36.867872Z"
-    }
+     "end_time": "2023-08-22T14:49:53.946179Z",
+     "start_time": "2023-08-22T14:49:53.925274Z"
+    },
+    "scrolled": false
    },
    "outputs": [
     {
@@ -156,17 +157,17 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {
       "image/jpeg": {
-       "width": 500
+       "width": 850
       }
      },
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "Image('./imgs/hyperplane.jpeg', width=500)"
+    "Image('./imgs/hyperplane.jpeg', width=850)"
    ]
   }
  ],
