--- a/ssh 端口转发与跳板机.ipynb
+++ b/ssh 端口转发与跳板机.ipynb
@@ -10,6 +10,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "014da1c1",
+   "metadata": {},
+   "source": [
+    "## basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc9a8a58",
+   "metadata": {},
+   "source": [
+    "- `ssh username@ip`\n",
+    "- 配置文件：`~/.ssh/config`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eca7ab95",
+   "metadata": {},
+   "source": [
+    "## 端口转发"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "164891d2",
@@ -119,6 +144,22 @@
     "    - 在 server1 上连接内部服务器（server3）: `ssh root@127.0.0.1 -p 9000`\n",
     "- 动态端口转发"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9d8259c",
+   "metadata": {},
+   "source": [
+    "## `ssh -D`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb116548",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
