--- a/网卡与网络.ipynb
+++ b/网卡与网络.ipynb
@@ -18,6 +18,23 @@
   },
   {
    "cell_type": "markdown",
+   "id": "48248f31",
+   "metadata": {},
+   "source": [
+    "## bascis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48d6be9b",
+   "metadata": {},
+   "source": [
+    "- `ping `\n",
+    "    - ping github.com, if ping failed. it is DNS error.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "d0d7391c",
    "metadata": {},
    "source": [
