--- a/网卡与网络.ipynb
+++ b/网卡与网络.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48248f31",
+   "id": "53170ca1",
    "metadata": {},
    "source": [
     "## bascis"
@@ -26,11 +26,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "48d6be9b",
+   "id": "513e13f9",
    "metadata": {},
    "source": [
-    "- `ping `\n",
-    "    - ping github.com, if ping failed. it is DNS error.\n"
+    "- `ping`\n",
+    "    - ping github.com, if ping failed. it is DNS error.\n",
+    "- `dns`"
    ]
   },
   {
