--- a/网卡与网络.ipynb
+++ b/网卡与网络.ipynb
@@ -69,6 +69,24 @@
    "source": [
     "## 端口转发（forward）"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57e98a9c",
+   "metadata": {},
+   "source": [
+    "## Clash"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bd428d19",
+   "metadata": {},
+   "source": [
+    "- Clash for windows（CFW）\n",
+    "    - 注意 port，有时候会因为服务异常终止导致 7890 的端口号被占用，看下是不是变成了 0\n",
+    "- 加速猫"
+   ]
   }
  ],
  "metadata": {
