--- a/显卡核心技术参数.ipynb
+++ b/显卡核心技术参数.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fbe30793",
+   "id": "8b025501",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-08-26T11:40:15.379445Z",
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "55d451cd",
+   "id": "581f9868",
    "metadata": {},
    "source": [
     "## cuda 和 tensor cores"
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a3a158cc",
+   "id": "de91e5f2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-08-26T11:42:04.681386Z",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60e190a2",
+   "id": "0cd4d56d",
    "metadata": {},
    "source": [
     "- cuda 并行计算\n",
@@ -66,7 +66,8 @@
     "        - 2^14/2^9=2^5\n",
     "    - 而 20 系的倍数是 8/1\n",
     "- 存储\n",
-    "    - sL1 > L2 > 显存（VRAM）"
+    "    - 速度：L1 > L2 > 显存（VRAM）\n",
+    "        - L1/L2：cache"
    ]
   }
  ],
