--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ae2c3234",
+   "metadata": {},
+   "source": [
+    "- 执行写/修改等操作的命令时，如果可以要尽可能先做查看（先读）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cba582c4",
    "metadata": {},
    "source": [
@@ -171,10 +179,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6db4100c",
+   "metadata": {},
+   "source": [
+    "### zip 与 unzip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "c67cdd02",
    "metadata": {},
    "source": [
-    "- `zip -r my_model.zip ./my_model`"
+    "- `zip -r my_model.zip ./my_model`\n",
+    "- `unzip -n text.zip -d /tmp`\n",
+    "    - 将压缩文件 text.zip 在指定目录 /tmp 下解压缩（`-d`：directory）\n",
+    "    - 如果已有相同的文件存在,要求unzip命令不覆盖原先的文件（`-n`：new overwriting）。\n",
+    "        - `-o`：overwrite"
    ]
   }
  ],
