--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -194,7 +194,10 @@
     "- `unzip -n text.zip -d /tmp`\n",
     "    - 将压缩文件 text.zip 在指定目录 /tmp 下解压缩（`-d`：directory）\n",
     "    - 如果已有相同的文件存在,要求unzip命令不覆盖原先的文件（`-n`：new overwriting）。\n",
-    "        - `-o`：overwrite"
+    "        - `-o`：overwrite\n",
+    "- `unzip` 查看\n",
+    "    - `unzip -l`\n",
+    "    - `unzip -v`"
    ]
   }
  ],
