--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -139,6 +139,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "40da134d",
+   "metadata": {},
+   "source": [
+    "- 判断两个文件的**内容**是否完全一致（identical），用 md5sum\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4a6d364a",
    "metadata": {},
    "source": [
