--- a/网卡与网络.ipynb
+++ b/网卡与网络.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "04951ca9",
+   "metadata": {},
+   "source": [
+    "## basics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac5b45cb",
+   "metadata": {},
+   "source": [
+    "- 注意 google.com 与 google.com.hk 是不同的域名"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e34c1f2e",
    "metadata": {},
    "source": [
@@ -105,7 +121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.13"
   },
   "toc": {
    "base_numbering": 1,
