--- a/网卡与网络.ipynb
+++ b/网卡与网络.ipynb
@@ -101,7 +101,9 @@
    "source": [
     "- Clash for windows（CFW）\n",
     "    - 注意 port，有时候会因为服务异常终止导致 7890 的端口号被占用，看下是不是变成了 0\n",
-    "- 加速猫"
+    "- clash 配置平台\n",
+    "    - 加速猫\n",
+    "    - wgetcloud：https://3jkkvi9afjjln2yjwnbc.wgetcloud.org/user/subscribe"
    ]
   }
  ],
