--- a/gpu_cuda_basics_info.ipynb
+++ b/gpu_cuda_basics_info.ipynb
@@ -94,6 +94,23 @@
     "# bf16 支持\n",
     "torch.cuda.is_bf16_supported()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77108dfb",
+   "metadata": {},
+   "source": [
+    "## cuda "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b790c04d",
+   "metadata": {},
+   "source": [
+    "- cuda kernel 开发\n",
+    "    - kernel 特指基于 cuda 的 function（函数），一般由 `__global__` 修饰；"
+   ]
   }
  ],
  "metadata": {
@@ -112,7 +129,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
