--- a/cuda_visible_devices.ipynb
+++ b/cuda_visible_devices.ipynb
@@ -137,12 +137,61 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2a0d577a",
+   "cell_type": "markdown",
+   "id": "6b2dfe8a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## vscode"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5326e056",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "     \"env\": {\n",
+    "                \"CUDA_VISIBLE_DEVICES\": \"0\"\n",
+    "            },\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78f0a87e",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "{\n",
+    "    // Use IntelliSense to learn about possible attributes.\n",
+    "    // Hover to view descriptions of existing attributes.\n",
+    "    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387\n",
+    "    \"version\": \"0.2.0\",\n",
+    "    \"configurations\": [\n",
+    "        {\n",
+    "            \"name\": \"Python: Run eval.py\",\n",
+    "            \"type\": \"python\",\n",
+    "            \"request\": \"launch\",\n",
+    "            \"program\": \"${workspaceFolder}/eval.py\",\n",
+    "            \"console\": \"integratedTerminal\",\n",
+    "            \"env\": {\n",
+    "                \"CUDA_VISIBLE_DEVICES\": \"0\"\n",
+    "            },\n",
+    "            \"args\": [\n",
+    "                \"--env\", \"Rope\",\n",
+    "                \"--pstep\", \"2\",\n",
+    "                \"--g_dim\", \"32\",\n",
+    "                \"--len_seq\", \"64\",\n",
+    "                \"--I_factor\", \"10\",\n",
+    "                \"--fit_type\", \"structured\",\n",
+    "                \"--fit_num\", \"8\",\n",
+    "                \"--eval_set\", \"demo\"\n",
+    "            ]\n",
+    "        }\n",
+    "    ]\n",
+    "}\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
@@ -161,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
