--- a/服务器管理及运维_磁盘_硬盘_内存.ipynb
+++ b/服务器管理及运维_磁盘_硬盘_内存.ipynb
@@ -58,6 +58,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b87ecac6",
+   "metadata": {},
+   "source": [
+    "## 内存（memory）"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b7fc401",
+   "metadata": {},
+   "source": [
+    "- 内存\n",
+    "\n",
+    "    ```\n",
+    "    $ free -h\n",
+    "    ```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2dcf26a5",
    "metadata": {},
    "source": [
@@ -241,7 +261,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
