--- a/linux_shell.ipynb
+++ b/linux_shell.ipynb
@@ -115,6 +115,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "92e8a704",
+   "metadata": {},
+   "source": [
+    "- `2>/dev/null`：将命令的错误输出（stderr）重定向到 `/dev/null`；"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "320b47a0",
    "metadata": {},
    "source": [
@@ -225,7 +233,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
