--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "- Clash for windows（CFW）\n",
     "    - 注意 port，有时候会因为服务异常终止导致 7890 的端口号被占用，看下是不是变成了 0\n",
+    "- Shadowrocket：俗称小火箭，ios app 上也可下载安装（2.99刀）\n",
     "- clash 配置平台\n",
     "    - 加速猫\n",
     "    - wgetcloud：https://3jkkvi9afjjln2yjwnbc.wgetcloud.org/user/subscribe"
@@ -46,7 +47,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.13"
   },
   "toc": {
    "base_numbering": 1,
