--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -29,6 +29,48 @@
     "    - 加速猫\n",
     "    - wgetcloud：https://3jkkvi9afjjln2yjwnbc.wgetcloud.org/user/subscribe"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bda3408c",
+   "metadata": {},
+   "source": [
+    "## 协议"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e9f12b4",
+   "metadata": {},
+   "source": [
+    "- Shadowsocks\n",
+    "- V2Ray"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5740d860",
+   "metadata": {},
+   "source": [
+    "## 一些黑话"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3f5b6f26",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-19T15:42:04.483420Z",
+     "start_time": "2023-12-19T15:42:04.468457Z"
+    }
+   },
+   "source": [
+    "- 机场、跑道\n",
+    "    - 机场：clash、Shadowrocket\n",
+    "    - 跑道：wget，加速猫\n",
+    "- 梯子\n",
+    "    - lantern"
+   ]
   }
  ],
  "metadata": {
