--- a/cuda_visible_devices.ipynb
+++ b/cuda_visible_devices.ipynb
@@ -137,6 +137,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2216019c",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-20T14:28:07.842967Z",
+     "start_time": "2023-12-20T14:28:06.105056Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 9)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "# update 1220\n",
+    "!CUDA_VISIBLE_DEVICES=0 python -c 'import torch; print(torch.cuda.get_device_capability())'"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6b2dfe8a",
    "metadata": {},
