--- a/gpu_cuda_basics_info.ipynb
+++ b/gpu_cuda_basics_info.ipynb
@@ -97,6 +97,64 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9beeb035",
+   "metadata": {},
+   "source": [
+    "## cuda arch list 或者 计算兼容性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "98de6c0f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-20T14:29:19.247504Z",
+     "start_time": "2023-12-20T14:29:17.502908Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(8, 9)\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!CUDA_VISIBLE_DEVICES=0 python -c 'import torch; print(torch.cuda.get_device_capability())'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d577c679",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-20T14:29:35.021180Z",
+     "start_time": "2023-12-20T14:29:33.586085Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(8, 9)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "torch.cuda.get_device_capability()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "77108dfb",
    "metadata": {},
    "source": [
