--- a/gpu_cuda_basics_info.ipynb
+++ b/gpu_cuda_basics_info.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9beeb035",
+   "id": "3021621b",
    "metadata": {},
    "source": [
     "## cuda arch list 或者 计算兼容性"
@@ -106,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "98de6c0f",
+   "id": "cc7d08a2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-12-20T14:29:19.247504Z",
@@ -128,12 +128,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "d577c679",
+   "execution_count": 3,
+   "id": "ddfed7bb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2023-12-20T14:29:35.021180Z",
-     "start_time": "2023-12-20T14:29:33.586085Z"
+     "end_time": "2023-12-20T14:31:35.167340Z",
+     "start_time": "2023-12-20T14:31:35.161515Z"
     }
    },
    "outputs": [
@@ -143,13 +143,14 @@
        "(8, 9)"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import torch\n",
+    "# TORCH_CUDA_ARCH_LIST=\"8.6\"\n",
     "torch.cuda.get_device_capability()"
    ]
   },
