--- a/huggingface_transformers_环境.ipynb
+++ b/huggingface_transformers_环境.ipynb
@@ -27,17 +27,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "0814351e",
+   "execution_count": 1,
+   "id": "64327d90",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-21T13:18:55.041616Z",
+     "start_time": "2023-12-21T13:18:55.036233Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#!pip install git+https://github.com/huggingface/transformers.git"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21e217ca",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-11-28T00:02:34.012758Z",
      "start_time": "2023-11-28T00:02:34.007264Z"
     }
    },
-   "outputs": [],
    "source": [
-    "#!pip install git+https://github.com/huggingface/transformers.git"
+    "- 或者下载（git clone）下来之后，\n",
+    "    - `pip install -e .`：Python 会在 site-packages 目录中创建一个链接指向你的项目目录。\n",
+    "    - `python setup.py install`：会把项目安装到Python的 site-packages 目录中。与可编辑模式不同，这种方式会复制文件，而不是创建链接。"
    ]
   },
   {
