--- a/网卡与网络.ipynb
+++ b/网卡与网络.ipynb
@@ -64,7 +64,10 @@
    "source": [
     "- `ping`\n",
     "    - ping github.com, if ping failed. it is DNS error.\n",
-    "- `dns`"
+    "- `dns`\n",
+    "- 端口号占用\n",
+    "    - `netstat -anp | grep 29500`\n",
+    "    - `lsof -i :29500`"
    ]
   },
   {
