--- a/科学上网.ipynb
+++ b/科学上网.ipynb
@@ -11,6 +11,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3602d222",
+   "metadata": {},
+   "source": [
+    "- 终端窗口会话级别\n",
+    "\n",
+    "    ```\n",
+    "    export https_proxy=http://127.0.0.1:7890\n",
+    "    export http_proxy=http://127.0.0.1:7890\n",
+    "    export all_proxy=socks5://127.0.0.1:7890\n",
+    "    ```\n",
+    "- 代码层面\n",
+    "\n",
+    "```\n",
+    "import os\n",
+    "\n",
+    "os.environ['https_proxy'] = http://127.0.0.1:7890\n",
+    "os.environ['http_proxy'] = http://127.0.0.1:7890\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "71174f1f",
    "metadata": {},
    "source": [
