--- a/huggingface_transformers_环境.ipynb
+++ b/huggingface_transformers_环境.ipynb
@@ -104,6 +104,28 @@
    "source": [
     "transformers.__version__"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab691765",
+   "metadata": {},
+   "source": [
+    "## apex"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "710e0c50",
+   "metadata": {},
+   "source": [
+    "- 源码安装\n",
+    "    - `git clone git@github.com:NVIDIA/apex.git`\n",
+    "    - `cd apex`\n",
+    "    - `pip install -v --no-cache-dir --global-option=\"--cpp_ext\" --global-option=\"--cuda_ext\" ./`\n",
+    "    - 如果出现 `ModuleNotFoundError: No module named 'packaging'`\n",
+    "        - 尝试 `git checkout 22.04-dev` (https://github.com/NVIDIA/apex/issues/1737)\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
