--- a/huggingface_transformers_环境.ipynb
+++ b/huggingface_transformers_环境.ipynb
@@ -126,6 +126,27 @@
     "        - 尝试 `git checkout 22.04-dev` (https://github.com/NVIDIA/apex/issues/1737)\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "694bb7c0",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from torch._six import string_classes as string_classes \n",
+    "ModuleNotFoundError: No module named 'torch._six'\n",
+    "```\n",
+    "\n",
+    "- 定位到源码位置，做如下修改：\n",
+    "\n",
+    "    ```\n",
+    "    # if isinstance(root, torch._six.string_classes):\n",
+    "        # ...\n",
+    "\n",
+    "    if isinstance(root, str): \n",
+    "        ...\n",
+    "    ```"
+   ]
   }
  ],
  "metadata": {
