--- a/gpu_cuda_nvcc.ipynb
+++ b/gpu_cuda_nvcc.ipynb
@@ -97,6 +97,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "33e93e87",
+   "metadata": {},
+   "source": [
+    "## cuda 版本及多版本安装"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3021621b",
    "metadata": {},
    "source": [
@@ -156,10 +164,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "58885d5a",
+   "metadata": {},
+   "source": [
+    "## nvcc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "343ce55f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-26T14:27:59.654492Z",
+     "start_time": "2023-12-26T14:27:59.517980Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "compute_35\r\n",
+      "compute_37\r\n",
+      "compute_50\r\n",
+      "compute_52\r\n",
+      "compute_53\r\n",
+      "compute_60\r\n",
+      "compute_61\r\n",
+      "compute_62\r\n",
+      "compute_70\r\n",
+      "compute_72\r\n",
+      "compute_75\r\n",
+      "compute_80\r\n",
+      "compute_86\r\n",
+      "compute_87\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!nvcc --list-gpu-arch"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "77108dfb",
    "metadata": {},
    "source": [
-    "## cuda "
+    "## cuda 开发"
    ]
   },
   {
